adcionando os cards

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <button class="btn-assistir"">
             <img src=" img/plus.svg" alt="">
-            Quero Assistir
+            Add to List
           </button>
         </div>
       </li>
