ajeitando o tamanho das imagens e padding

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     <ul class="movies-list">
       <li class="movie">
         <img src="img/stars.jpg" alt="" class="movie-img">
+
         <div class="movie-texts">
           <h1 class="movie-title">Aventura Espacial</h1>
           <div class="star-rate">
             <img src="/img/star.svg" alt="">
             <span class="rate">8.5</span>
           </div>
-          <button class="btn-assistir"">
-            <img src=" img/plus.svg" alt="">
+          <button class="btn-assistir">
+            <img src="img/plus.svg" alt="">
             Add to List
           </button>
         </div>
