my list working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <div class="header-container">
     <header class="header">
-      <h1>Movie Search</h1>
+      <h1><a href="index.html">Movie Search</a></h1>
+
       <div class="input-wrapper">
         <img src="/img/search.svg" alt="" id="search-icon">
         <input type="text" id="inputmovie" placeholder="Search a movie...">
@@ -21,7 +22,7 @@
   </div>
 
   <section class="movies-container">
-    <h1>Filmes em Destaque</h1>
+    <h1 id="h1-text">Popular Movies</h1>
 
     <ul class="movies-list">
       <li class="movie">
