--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
           Movie Search</a></h1>
 
       <div class="input-wrapper">
-        <input type="text" id="inputmovie" placeholder="Search a movie...">
+        <input type="text" id="inputmovie" placeholder="Busque um filme...">
         <img src="/img/search.svg" alt="" id="search-icon">
       </div>
 
       <a href="" id="my-list">
         <img src="/img/love.svg" alt="">
-        My List</a>
+        Minha Lista</a>
     </header>
   </div>
 
   <section class="movies-container">
-    <h1 id="h1-text">Popular Movies</h1>
+    <h1 id="h1-text">Filmes Populares</h1>
 
     <ul class="movies-list">
 
@@ -38,7 +38,7 @@
     </ul>
   </section>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
